--- a/Grievance_Redressal/src/components/RegisterPage.css
+++ b/Grievance_Redressal/src/components/RegisterPage.css
@@ -12,7 +12,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  min-height: 100vh;
   background: linear-gradient(135deg, #00b4db, #004b88);
 }
 
@@ -35,10 +35,25 @@ body {
   width: 100%;
   max-width: 500px;
 }
+.Login-form{
+  background-color: white;
+  padding: 40px;
+  border-radius: 15px;
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+  /* width: 100%; */
+  max-width: 500px;
+}
 
 .input-group {
+  display: flex;
+  flex-direction: column;
+  /* background-color: red; */
   position: relative;
   margin-bottom: 30px;
+}
+
+.error-text{
+  color: red;
 }
 
 .input-group input,
